--- a/src/components/brush/CMakeLists.txt
+++ b/src/components/brush/CMakeLists.txt
@@ -1,28 +1,6 @@
-#INCLUDEPATH += $$BRUSH_DIR
-#
-#unix {
-#    LIBS += -L$$BRUSH_DIR -ltupibrush
-#}
-#
-#win32 {
-#    LIBS += -L$$BRUSH_DIR/release/ -ltupibrush
-#}
-#
-#linux-g++ {
-#    PRE_TARGETDEPS += $$BRUSH_DIR/libtupibrush.so
-#}
-
-#QT += opengl core gui svg xml network
-#TEMPLATE = lib
-#TARGET = tupibrush
-#
-#INSTALLS += target
-#target.path = /lib/
-#
-#CONFIG += dll warn_on
-#
-#HEADERS += tupbrushwidget.h 
-#           # tuppenthicknesswidget.h
+set(TUPIBRUSH_HEADERS
+    tupbrushwidget.h)
+    # tuppenthicknesswidget.h
 
 set(TUPIBRUSH_SOURCES
     tupbrushwidget.cpp)
@@ -34,40 +12,6 @@ set_target_properties(tupibrush PROPERTIES VERSION ${LIB_VERSION_STRING}
                       INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(tupibrush tupifwcore tupibase)
 
+install(TARGETS tupibrush LIBRARY DESTINATION ${TUPITUBE_TUPILIB})
 
-#FRAMEWORK_DIR = "../../framework"
-#include($$FRAMEWORK_DIR/framework.pri)
-#
-#unix {
-#    STORE_DIR = ../../store/
-#    INCLUDEPATH += $$STORE_DIR
-#    LIBS += -L$$STORE_DIR -ltupistore
-#
-#    LIBBASE_DIR = ../../libbase/
-#    INCLUDEPATH += $$LIBBASE_DIR
-#    LIBS += -L$$LIBBASE_DIR -ltupibase
-#
-#    LIBTUPI_DIR = ../../libtupi/
-#    INCLUDEPATH += $$LIBTUPI_DIR
-#    LIBS += -L$$LIBTUPI_DIR -ltupi
-#
-#    !include(../../../tupiglobal.pri) {
-#             error("Run ./configure first!")
-#    }
-#}
-#
-#win32 {
-#    include(../../../win.pri)
-#
-#    STORE_DIR = ../../store/
-#    INCLUDEPATH += $$STORE_DIR
-#    LIBS += -L$$STORE_DIR/release/ -ltupistore
-#
-#	LIBBASE_DIR = ../../libbase/
-#    INCLUDEPATH += $$LIBBASE_DIR
-#    LIBS += -L$$LIBBASE_DIR/release/ -ltupibase
-#
-#	LIBTUPI_DIR = ../../libtupi/
-#    INCLUDEPATH += $$LIBTUPI_DIR
-#    LIBS += -L$$LIBTUPI_DIR/release/ -ltupi 
-#}
+# what do we do with TUPIBRUSH_HEADERS ?
