--- a/src/components/import/CMakeLists.txt
+++ b/src/components/import/CMakeLists.txt
@@ -1,27 +1,5 @@
-#INCLUDEPATH += $$IMPORT_DIR
-#
-#unix {
-#    LIBS += -L$$IMPORT_DIR -ltupimport
-#}
-#
-#win32 {
-#    LIBS += -L$$IMPORT_DIR/release/ -ltupimport
-#}
-#
-#linux-g++ {
-#    PRE_TARGETDEPS += $$IMPORT_DIR/libtupimport.so
-#}
-
-#QT += opengl core gui svg xml network
-#TEMPLATE = lib
-#TARGET = tupimport
-#
-#INSTALLS += target
-#target.path = /lib/
-#
-#CONFIG += dll warn_on
-#
-#HEADERS += tuppaletteimporter.h
+set(TUPIMPORT_HEADERS
+    tuppaletteimporter.h)
 
 set(TUPIMPORT_SOURCES
     tuppaletteimporter.cpp)
@@ -32,40 +10,6 @@ set_target_properties(tupimport PROPERTIES VERSION ${LIB_VERSION_STRING}
                       INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(tupimport tupifwcore tupistore)
 
+install(TARGETS tupimport LIBRARY DESTINATION ${TUPITUBE_TUPILIB})
 
-#FRAMEWORK_DIR = "../../framework"
-#include($$FRAMEWORK_DIR/framework.pri)
-#
-#unix {
-#    STORE_DIR = ../../store/
-#    INCLUDEPATH += $$STORE_DIR
-#    LIBS += -L$$STORE_DIR -ltupistore
-#
-#    LIBBASE_DIR = ../../libbase/
-#    INCLUDEPATH += $$LIBBASE_DIR
-#    LIBS += -L$$LIBBASE_DIR -ltupibase
-#
-#    LIBTUPI_DIR = ../../libtupi/
-#    INCLUDEPATH += $$LIBTUPI_DIR
-#    LIBS += -L$$LIBTUPI_DIR -ltupi
-#
-#    !include(../../../tupiglobal.pri) {
-#             error("Run ./configure first!")
-#    }
-#}
-#
-#win32 {
-#    include(../../../win.pri)
-#
-#    STORE_DIR = ../../store/
-#    INCLUDEPATH += $$STORE_DIR
-#    LIBS += -L$$STORE_DIR/release/ -ltupistore
-#
-#    LIBBASE_DIR = ../../libbase/
-#    INCLUDEPATH += $$LIBBASE_DIR
-#    LIBS += -L$$LIBBASE_DIR/release/ -ltupibase
-#
-#    LIBTUPI_DIR = ../../libtupi/
-#    INCLUDEPATH += $$LIBTUPI_DIR
-#    LIBS += -L$$LIBTUPI_DIR/release/ -ltupi 
-#}
+# what do we do with TUPIMPORT_HEADERS ?
