--- a/src/components/twitter/CMakeLists.txt
+++ b/src/components/twitter/CMakeLists.txt
@@ -1,33 +1,6 @@
-#INCLUDEPATH += $$TWITTER_DIR
-#
-#unix {
-#    LIBS += -L$$TWITTER_DIR -ltupitwitter
-#}
-#
-#win32 {
-#    LIBS += -L$$TWITTER_DIR/release/ -ltupitwitter
-#}
-#
-#linux-g++ {
-#    PRE_TARGETDEPS += $$TWITTER_DIR/libtupitwitter.so
-#}
-#
-
-#QT += opengl core gui svg xml network
-#TEMPLATE = lib
-#TARGET = tupitwitter
-#
-#INSTALLS += target
-#target.path = /lib/
-#
-#CONFIG += dll warn_on
-#
-#HEADERS += tuptwitter.h \  
-#           tuptwitterwidget.h
-#
-#SOURCES += tuptwitter.cpp \
-#           tuptwitterwidget.cpp
-#		   
+set(TUPITWITTER_HEADERS
+    tuptwitter.h
+    tuptwitterwidget.h)
 
 set(TUPITWITTER_SOURCES
     tuptwitter.cpp
@@ -39,40 +12,6 @@ set_target_properties(tupitwitter PROPERTIES VERSION ${LIB_VERSION_STRING}
                       INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(tupitwitter tupifwcore Qt::Network)
 
+install(TARGETS tupitwitter LIBRARY DESTINATION ${TUPITUBE_TUPILIB})
 
-#FRAMEWORK_DIR = "../../framework"
-#include($$FRAMEWORK_DIR/framework.pri)
-#
-#unix {
-#    STORE_DIR = ../../store/
-#    INCLUDEPATH += $$STORE_DIR
-#    LIBS += -L$$STORE_DIR -ltupistore
-#
-#    LIBBASE_DIR = ../../libbase/
-#    INCLUDEPATH += $$LIBBASE_DIR
-#    LIBS += -L$$LIBBASE_DIR -ltupibase
-#
-#    LIBTUPI_DIR = ../../libtupi/
-#    INCLUDEPATH += $$LIBTUPI_DIR
-#    LIBS += -L$$LIBTUPI_DIR -ltupi
-#
-#    !include(../../../tupiglobal.pri) {
-#             error("Run ./configure first!")
-#    }
-#}
-#
-#win32 {
-#    include(../../../win.pri)
-#
-#    STORE_DIR = ../../store/
-#    INCLUDEPATH += $$STORE_DIR
-#    LIBS += -L$$STORE_DIR/release/ -ltupistore
-#
-#    LIBBASE_DIR = ../../libbase/
-#    INCLUDEPATH += $$LIBBASE_DIR
-#    LIBS += -L$$LIBBASE_DIR/release/ -ltupibase
-#
-#    LIBTUPI_DIR = ../../libtupi/
-#    INCLUDEPATH += $$LIBTUPI_DIR
-#    LIBS += -L$$LIBTUPI_DIR/release/ -ltupi 
-#}
+# what do we do with TUPITWITTER_HEADERS ?
