--- a/src/components/workspace/CMakeLists.txt
+++ b/src/components/workspace/CMakeLists.txt
@@ -1,58 +1,31 @@
-#INCLUDEPATH += /usr/include/qt5/QtMultimedia /usr/include/qt5/QtMultimediaWidgets
-#INCLUDEPATH += $$WORKSPACE_DIR 
-#
-#unix {
-#    LIBS += -L$$WORKSPACE_DIR -ltupiworkspace
-#}
-#
-#win32 {
-#    LIBS += -L$$WORKSPACE_DIR/release/ -ltupiworkspace
-#}
-#
-#linux-g++ {
-#PRE_TARGETDEPS += $$WORKSPACE_DIR/libtupiworkspace.so
-#}
-#
+set(TUPIWORKSPACE_HEADERS
+    tuppaintarea.h
+    tupconfigurationarea.h
+    tupdocumentview.h
+    tupimagedevice.h
+    tuppaintareacommand.h
+    tuplibrarydialog.h
+    tupcanvas.h
+    tupcanvasview.h
+    tupimagedialog.h
+    tupstoryboarddialog.h
+    tuppendialog.h
+    tuponiondialog.h
+    # tupinfowidget.h
+    tupruler.h
+    tupcamerainterface.h
+    tupreflexinterface.h
+    tupbasiccamerainterface.h
+    tupcameradialog.h
+    tupcamerawindow.h
+    tupvideosurface.h
+    tuppapagayoimporter.h
+    tuppapagayodialog.h
+    tupreflexrenderarea.h
+    tupmodesitem.h
+    tupmodessettingsdialog.h
+    tupmodeslist.h)
 
-#QT += opengl core gui svg xml network
-#QT += multimedia multimediawidgets printsupport
-#TEMPLATE = lib
-#TARGET = tupiworkspace
-#
-#INSTALLS += target
-#target.path = /lib/
-#
-#CONFIG += dll warn_on
-#
-#HEADERS += tuppaintarea.h \
-#           tupconfigurationarea.h \
-#           tupdocumentview.h \
-#           tupimagedevice.h \
-#           tuppaintareacommand.h \
-#           tuplibrarydialog.h \
-#           tupcanvas.h \
-#           tupcanvasview.h \
-#           tupimagedialog.h \
-#           tupstoryboarddialog.h \
-#           tuppendialog.h \
-#           tuponiondialog.h \
-#           # tupinfowidget.h \
-#           tupruler.h \
-#           tupcamerainterface.h \
-#           tupreflexinterface.h \
-#           tupbasiccamerainterface.h \
-#           tupcameradialog.h \
-#           tupcamerawindow.h \
-#           tupvideosurface.h \
-#           tuppapagayoimporter.h \
-#           tuppapagayodialog.h \
-#           tupreflexrenderarea.h \
-#           tupmodesitem.h \
-#           tupmodessettingsdialog.h \
-#           tupmodeslist.h
-#
-
-# tupdocumentview.cpp moc troubles
 set(TUPIWORKSPACE_SOURCES
     tuppaintarea.cpp
     tupconfigurationarea.cpp
@@ -93,64 +66,8 @@ set_target_properties(tupiworkspace PROPERTIES VERSION ${LIB_VERSION_STRING}
                       INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})
 target_include_directories(tupiworkspace PUBLIC ${SHELL_INCLUDE_DIR} ${SELECTION_INCLUDE_DIR} ${POLYLINETOOL_INCLUDE_DIR})
 target_link_libraries(tupiworkspace tupifwcore tupifwgui tupi tupibase rastermain
-   Qt5::Multimedia Qt5::MultimediaWidgets Qt5::PrintSupport)
+   Qt::Multimedia Qt::MultimediaWidgets Qt::PrintSupport)
 
+install(TARGETS tupiworkspace LIBRARY DESTINATION ${TUPITUBE_TUPILIB})
 
-
-#
-#SHELL_DIR = ../../shell/
-#INCLUDEPATH += $$SHELL_DIR
-#
-#PLUGIN_DIR = ../../plugins/export/genericexportplugin
-#INCLUDEPATH += $$PLUGIN_DIR
-#
-#SELECTION_DIR = ../../plugins/tools/selection
-#INCLUDEPATH += $$SELECTION_DIR
-#
-#POLYLINE_DIR = ../../plugins/tools/polyline
-#INCLUDEPATH += $$POLYLINE_DIR
-#
-#FRAMEWORK_DIR = "../../framework"
-#include($$FRAMEWORK_DIR/framework.pri)
-#
-#LIBCOLOR_DIR = "../../libcolor"
-#include($$LIBCOLOR_DIR/libcolor.pri)
-#
-#MYPAINT_DIR = "../../mypaint"
-#include($$MYPAINT_DIR/mypaint.pri)
-#
-#unix {
-#    INCLUDEPATH += /usr/include/qt5/QtMultimedia /usr/include/qt5/QtMultimediaWidgets
-#
-#    STORE_DIR = ../../store/
-#    INCLUDEPATH += $$STORE_DIR
-#    LIBS += -L$$STORE_DIR -ltupistore
-#
-#    LIBBASE_DIR = ../../libbase/
-#    INCLUDEPATH += $$LIBBASE_DIR
-#    LIBS += -L$$LIBBASE_DIR -ltupibase
-#
-#    LIBTUPI_DIR = ../../libtupi/
-#    INCLUDEPATH += $$LIBTUPI_DIR
-#    LIBS += -L$$LIBTUPI_DIR -ltupi
-#
-#    !include(../../../tupiglobal.pri) {
-#             error("Run ./configure first!")
-#    }
-#}
-#
-#win32 {
-#    include(../../../win.pri)
-#
-#    STORE_DIR = ../../store/
-#    INCLUDEPATH += $$STORE_DIR
-#    LIBS += -L$$STORE_DIR/release/ -ltupistore
-#
-#    LIBBASE_DIR = ../../libbase/
-#    INCLUDEPATH += $$LIBBASE_DIR
-#    LIBS += -L$$LIBBASE_DIR/release/ -ltupibase
-#
-#    LIBTUPI_DIR = ../../libtupi/
-#    INCLUDEPATH += $$LIBTUPI_DIR
-#    LIBS += -L$$LIBTUPI_DIR/release/ -ltupi 
-#}
+# what do we do with TUPIWORKSPACE_HEADERS ?
