--- a/src/framework/gui/CMakeLists.txt
+++ b/src/framework/gui/CMakeLists.txt
@@ -1,98 +1,69 @@
-#QT += opengl core gui svg xml network
-#TEMPLATE = lib
-#TARGET = tupifwgui
-#
-#macx {
-#    CONFIG += plugin warn_on
-#} else {
-#    CONFIG += warn_on dll
-#}
-#
-#unix {
-#    !include(../tupconfig.pri) {
-#        error("Run ./configure first!")
-#    }
-#}
-#
-#win32 {
-#    include(../../../win.pri)
-#}
-#
-#INSTALLS += target
-#target.path = /lib/
-#
-#contains(DEFINES, ADD_HEADERS) {
-#    INSTALLS += headers 
-#    headers.files += *.h
-#    headers.path = /include/tupigui
-#}
-#
-#HEADERS += taction.h \
-#           tactionmanager.h \
-#           tanimwidget.h \
-#           tapplication.h \
-#           tbackupdialog.h \
-#           tbuttonbar.h \
-#           tcellview.h \
-#           tcirclebutton.h \
-#           tcirclebuttonbar.h \
-#           tclicklineedit.h \
-#           # tcollapsiblewidget.h \
-#           tcolorbutton.h \
-#           tcommandhistory.h \
-#           tconfigurationdialog.h \
-#           tcontrolnode.h \
-#           tdoublecombobox.h \
-#           tdualcolorbutton.h \
-#           teditspinbox.h \
-#           tflatbutton.h \
-#           tfontchooser.h \
-#           tformfactory.h \
-#           tformvalidator.h \
-#           ticon.h \
-#           # tideality.h \
-#           timagebutton.h \
-#           titemselector.h \
-#           tlabel.h \
-#           tmainwindow.h \
-#           tmainwindowabstractsettings.h \
-#           # tmainwindowfactory.h \
-#           tmoviegenerator.h \
-#           tmoviegeneratorinterface.h \
-#           tnodegroup.h \
-#           tseparator.h \
-#           toptionaldialog.h \
-#           tosd.h \
-#           tpathhelper.h \
-#           tpushbutton.h \
-#           tradiobuttongroup.h \
-#           trulerbase.h \
-#           # tstackedmainwindow.h \
-#           tstylecombobox.h \
-#           tabbedmainwindow.h \
-#           tabdialog.h \
-#           # ttabwidget.h \
-#           themedocument.h \
-#           thememanager.h \
-#           tipdialog.h \
-#           ttoolbox.h \
-#           toolview.h \
-#           treelistwidget.h \
-#           treewidgetsearchline.h \
-#           tvhbox.h \
-#           tviewbutton.h \
-#           # twaitstyle.h \
-#           twidgetlistview.h \
-#           twizard.h \
-#           tworkspacemainwindow.h \
-#           txyspinbox.h \
-#           tcolorcell.h \
-#           tslider.h \
-#           tsizebox.h \
-#           tcolorarrow.xpm \
-#           tcolorreset.xpm \
-#           tmsgdialog.h
-#
+set(TUPIFWGUI_HEADERS
+     taction.h
+     tactionmanager.h
+     tanimwidget.h
+     tapplication.h
+     tbackupdialog.h
+     tbuttonbar.h
+     tcellview.h
+     tcirclebutton.h
+     tcirclebuttonbar.h
+     tclicklineedit.h
+     # tcollapsiblewidget.h
+     tcolorbutton.h
+     tcommandhistory.h
+     tconfigurationdialog.h
+     tcontrolnode.h
+     tdoublecombobox.h
+     tdualcolorbutton.h
+     teditspinbox.h
+     tflatbutton.h
+     tfontchooser.h
+     tformfactory.h
+     tformvalidator.h
+     ticon.h
+     # tideality.h
+     timagebutton.h
+     titemselector.h
+     tlabel.h
+     tmainwindow.h
+     tmainwindowabstractsettings.h
+     # tmainwindowfactory.h
+     tmoviegenerator.h
+     tmoviegeneratorinterface.h
+     tnodegroup.h
+     tseparator.h
+     toptionaldialog.h
+     tosd.h
+     tpathhelper.h
+     tpushbutton.h
+     tradiobuttongroup.h
+     trulerbase.h
+     # tstackedmainwindow.h
+     tstylecombobox.h
+     tabbedmainwindow.h
+     tabdialog.h
+     # ttabwidget.h
+     themedocument.h
+     thememanager.h
+     tipdialog.h
+     ttoolbox.h
+     toolview.h
+     treelistwidget.h
+     treewidgetsearchline.h
+     tvhbox.h
+     tviewbutton.h
+     # twaitstyle.h
+     twidgetlistview.h
+     twizard.h
+     tworkspacemainwindow.h
+     txyspinbox.h
+     tcolorcell.h
+     tslider.h
+     tsizebox.h
+     tcolorarrow.xpm
+     tcolorreset.xpm
+     tmsgdialog.h)
 
 set(TUPIFWGUI_SOURCES
     taction.cpp
@@ -157,30 +128,14 @@ set(TUPIFWGUI_SOURCES
     tmsgdialog.cpp)
 
 
-#
-#INCLUDEPATH += ../core ../ ../../libbase
-#
-## RESOURCES += tgui_images.qrc
-#
-#linux-g {
-#    TARGETDEPS += ../core/libtupifwcore.so
-#}
-#
-#unix {
-#    LIBS += -L../core -ltupifwcore
-#    # INCLUDEPATH += ../core ../ ../../libbase
-#    INCLUDEPATH += ../core
-#}
-#
-#win32 {
-#    LIBS += -L../core/release/ -ltupifwcore
-#    INCLUDEPATH += ../core
-#}
-
-### see if there's a cleaner way to do this
-
 add_library(tupifwgui SHARED ${TUPIFWGUI_SOURCES})
 set_target_properties(tupifwgui PROPERTIES VERSION ${LIB_VERSION_STRING}
                       SOVERSION ${LIB_VERSION_MAJOR}
                       INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(tupifwgui tupifwcore Qt5::Widgets Qt5::Xml)
+target_link_libraries(tupifwgui tupifwcore Qt::Widgets Qt::Xml)
+
+install(TARGETS tupifwgui LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
+
+if(ADD_HEADERS)
+  install(FILES ${TUPIFWGUI_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/tupigui)
+endif()
