--- a/src/plugins/export/CMakeLists.txt
+++ b/src/plugins/export/CMakeLists.txt
@@ -1,8 +1,4 @@
-#CONFIG += ordered warn_on
-
 add_subdirectory(imageplugin)
-
-#
 ## SMIL plugin will be disabled temporary 
 #add_subdirectory(# smileplugin)
 
@@ -28,8 +24,7 @@ if(THEORA_FOUND)
 add_subdirectory(theoraplugin)
 endif()
 
-#
-## Experimental code
-#contains(DEFINES, HAVE_APNG) {
-#         SUBDIRS += apngplugin
-#}
+# Experimental code
+#if(HAVE_APNG)
+#add_subdirectory(apngplugin)
+#endif()
