--- a/src/plugins/export/ffmpegplugin/CMakeLists.txt
+++ b/src/plugins/export/ffmpegplugin/CMakeLists.txt
@@ -1,39 +1,6 @@
-#QT += opengl core gui svg xml network
-#CONFIG += plugin warn_on
-#TEMPLATE = lib
-#TARGET = tupiffmpegplugin
-#
-#unix {
-#    !include(../../../../tupiglobal.pri) {
-#        error("Please run configure first")
-#    }
-#}
-#
-#INSTALLS += target
-#target.path = /plugins/
-#
-#contains("DEFINES", "ADD_HEADERS") {
-#    INSTALLS += headers
-#    headers.target = .
-#    headers.commands = /bin/cp *.h $(INSTALL_ROOT)/include/tupiffmpeg
-#    headers.path = /include/tupiffmpeg
-#}
-#
-#win32 {
-#    include(../../../../win.pri)
-#    include(../../../../ffmpeg.win.pri)
-#}
-#
-#mac {
-#    LIBS += -lavutil
-#}
-#
-#HEADERS += tffmpegmoviegenerator.h \
-#           ffmpegplugin.h
-#
-#SOURCES += tffmpegmoviegenerator.cpp \
-#           ffmpegplugin.cpp
-#
+set(TUPIFFMPEGPLUGIN_HEADERS
+    tffmpegmoviegenerator.h
+    ffmpegplugin.h)
 
 set(TUPIFFMPEGPLUGIN_SOURCES
     tffmpegmoviegenerator.cpp
@@ -45,14 +12,8 @@ target_link_libraries(tupiffmpegplugin tupifwcore tupibase ${FFMPEG_LIBRARIES})
 # unsure about the link to FFMPEG_LIBRARIES, it appears to be automated, but
 # I'm going to leave it there for good measure
 
-#FRAMEWORK_DIR = "../../../framework"
-#include($$FRAMEWORK_DIR/framework.pri)
-#
-#LIBBASE_DIR = ../../../libbase
-#STORE_DIR = ../../../store
-#LIBTUPI_DIR = ../../../libtupi
-#
-#include($$LIBBASE_DIR/libbase.pri)
-#include($$STORE_DIR/store.pri)
-#include($$LIBTUPI_DIR/libtupi.pri)
-#
+install(TARGETS tupiffmpegplugin DESTINATION ${TUPITUBE_PLUGIN})
+
+if(ADD_HEADERS)
+  install(FILES ${TUPIFFMPEGPLUGIN_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/tupiffmpeg)
+endif()
