--- a/src/plugins/tools/fill/CMakeLists.txt
+++ b/src/plugins/tools/fill/CMakeLists.txt
@@ -1,24 +1,5 @@
-#QT += opengl core gui svg xml network
-#CONFIG += plugin warn_on
-#TEMPLATE = lib
-#TARGET = tupifilltool
-#
-#unix {
-#    !include(../../../../tupiglobal.pri){
-#        error("Please run configure first")
-#    }
-#}
-#
-#win32 {
-#    include(../../../../win.pri)
-#}
-#
-#INSTALLS += target 
-#target.path = /plugins/
-#
-#HEADERS += filltool.h 
-#
-#SOURCES += filltool.cpp
+set(TUPIFILLTOOL_HEADERS
+    filltool.h)
 
 set(TUPIFILLTOOL_SOURCES
     filltool.cpp)
@@ -26,16 +7,6 @@ set(TUPIFILLTOOL_SOURCES
 add_library(tupifilltool MODULE ${TUPIFILLTOOL_SOURCES})
 target_link_libraries(tupifilltool tupifwcore tupibase)
 
-#
-#FRAMEWORK_DIR = "../../../framework"
-#include($$FRAMEWORK_DIR/framework.pri)
-#
-#LIBBASE_DIR = ../../../libbase
-#STORE_DIR = ../../../store
-#LIBTUPI_DIR = ../../../libtupi
-#COMMON_DIR = ../common
-#
-#include($$LIBBASE_DIR/libbase.pri)	
-#include($$STORE_DIR/store.pri)
-#include($$LIBTUPI_DIR/libtupi.pri)
-#include($$COMMON_DIR/common.pri)
+install(TARGETS tupifilltool DESTINATION ${TUPITUBE_PLUGIN})
+
+# what do we do with TUPIFILLTOOL_HEADERS ?
