--- a/src/plugins/tools/motion/CMakeLists.txt
+++ b/src/plugins/tools/motion/CMakeLists.txt
@@ -1,25 +1,7 @@
-#QT += opengl core gui svg xml network
-#CONFIG += plugin warn_on
-#TEMPLATE = lib
-#TARGET = tupimotiontool
-#
-#unix {
-#    !include(../../../../tupiglobal.pri){
-#        error("Please run configure first")
-#    }
-#}
-#
-#win32 {
-#    include(../../../../win.pri)
-#}
-#
-#INSTALLS += target 
-#target.path = /plugins/
-#
-#HEADERS += tweener.h \
-#           configurator.h \
-#           motionsettings.h
-#		   
+set(TUPIMOTIONTOOL_HEADERS
+    tweener.h
+    configurator.h
+    motionsettings.h)
 
 set(TUPIMOTIONTOOL_SOURCES
     tweener.cpp
@@ -29,15 +11,7 @@ set(TUPIMOTIONTOOL_SOURCES
 add_library(tupimotiontool MODULE ${TUPIMOTIONTOOL_SOURCES})
 target_link_libraries(tupimotiontool tupifwcore tupibase tupiplugincommon)
 
-#FRAMEWORK_DIR = "../../../framework"
-#include($$FRAMEWORK_DIR/framework.pri)
-#
-#LIBBASE_DIR = ../../../libbase
-#STORE_DIR = ../../../store
-#LIBTUPI_DIR = ../../../libtupi
-#COMMON_DIR = ../common
-#
-#include($$LIBBASE_DIR/libbase.pri)	
-#include($$STORE_DIR/store.pri)
-#include($$LIBTUPI_DIR/libtupi.pri)
-#include($$COMMON_DIR/common.pri)
+# this wasn't present in 0.2.15
+install(TARGETS tupimotiontool DESTINATION ${TUPITUBE_PLUGIN})
+
+# what do we do with TUPIMOTIONTOOL_HEADERS ?
