--- a/src/plugins/tools/nodes/CMakeLists.txt
+++ b/src/plugins/tools/nodes/CMakeLists.txt
@@ -1,23 +1,5 @@
-#QT += opengl core gui svg xml network
-#CONFIG += plugin warn_on
-#TEMPLATE = lib
-#TARGET = tupinodestool
-#
-#unix {
-#    !include(../../../../tupiglobal.pri){
-#        error("Please run configure first")
-#    }
-#}
-#
-#win32 {
-#    include(../../../../win.pri)
-#}
-#
-#INSTALLS += target 
-#target.path = /plugins/
-#
-#HEADERS += nodestool.h
-#
+set(TUPINODESTOOL_HEADERS
+    nodestool.h)
 
 set(TUPINODESTOOL_SOURCES
     nodestool.cpp)
@@ -25,15 +7,6 @@ set(TUPINODESTOOL_SOURCES
 add_library(tupinodestool MODULE ${TUPINODESTOOL_SOURCES})
 target_link_libraries(tupinodestool tupifwcore tupifwgui tupibase)
 
-#FRAMEWORK_DIR = "../../../framework"
-#include($$FRAMEWORK_DIR/framework.pri)
-#
-#LIBBASE_DIR = ../../../libbase
-#STORE_DIR = ../../../store
-#LIBTUPI_DIR = ../../../libtupi
-#COMMON_DIR = ../common
-#
-#include($$LIBBASE_DIR/libbase.pri)	
-#include($$STORE_DIR/store.pri)
-#include($$LIBTUPI_DIR/libtupi.pri)
-#include($$COMMON_DIR/common.pri)
+install(TARGETS tupinodestool DESTINATION ${TUPITUBE_PLUGIN})
+
+# what do we do with TUPINODESTOOL_HEADERS ?
