--- a/src/components/exposure/CMakeLists.txt
+++ b/src/components/exposure/CMakeLists.txt
@@ -1,31 +1,8 @@
-#INCLUDEPATH += $$EXPOSURE_DIR
-#
-#unix {
-#    LIBS += -L$$EXPOSURE_DIR -ltupiexposure
-#}
-#
-#win32 {
-#    LIBS += -L$$EXPOSURE_DIR/release/ -ltupiexposure
-#}
-#
-#linux-g++ {
-#    PRE_TARGETDEPS += $$EXPOSURE_DIR/libtupiexposure.so
-#}
-
-#QT += opengl core gui svg xml network
-#TEMPLATE = lib
-#TARGET = tupiexposure
-#
-#INSTALLS += target
-#target.path = /lib/
-#
-#CONFIG += dll warn_on
-#
-#HEADERS += tupexposuresheet.h \
-#           tupexposureheader.h \
-#           tupexposuretable.h \
-#           tupscenetabwidget.h
-#
+set(TUPIEXPOSURE_HEADERS
+    tupexposuresheet.h
+    tupexposureheader.h
+    tupexposuretable.h
+    tupscenetabwidget.h)
 
 set(TUPIEXPOSURE_SOURCES
     tupexposuresheet.cpp
@@ -39,40 +16,6 @@ set_target_properties(tupiexposure PROPERTIES VERSION ${LIB_VERSION_STRING}
                       INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(tupiexposure tupifwcore tupibase)
 
+install(TARGETS tupiexposure LIBRARY DESTINATION ${TUPITUBE_TUPILIB})
 
-#FRAMEWORK_DIR = "../../framework"
-#include($$FRAMEWORK_DIR/framework.pri)
-#
-#unix {
-#    STORE_DIR = ../../store/
-#    INCLUDEPATH += $$STORE_DIR
-#    LIBS += -L$$STORE_DIR -ltupistore
-#
-#    LIBBASE_DIR = ../../libbase/
-#    INCLUDEPATH += $$LIBBASE_DIR
-#    LIBS += -L$$LIBBASE_DIR -ltupibase
-#
-#    LIBTUPI_DIR = ../../libtupi/
-#    INCLUDEPATH += $$LIBTUPI_DIR
-#    LIBS += -L$$LIBTUPI_DIR -ltupi
-#
-#    !include(../../../tupiglobal.pri) {
-#             error("Run ./configure first!")
-#    }
-#}
-#
-#win32 {
-#    include(../../../win.pri)
-#
-#    STORE_DIR = ../../store/
-#    INCLUDEPATH += $$STORE_DIR
-#    LIBS += -L$$STORE_DIR/release/ -ltupistore
-#
-#    LIBBASE_DIR = ../../libbase/
-#    INCLUDEPATH += $$LIBBASE_DIR
-#    LIBS += -L$$LIBBASE_DIR/release/ -ltupibase
-#
-#    LIBTUPI_DIR = ../../libtupi/
-#    INCLUDEPATH += $$LIBTUPI_DIR
-#    LIBS += -L$$LIBTUPI_DIR/release/ -ltupi 
-#}
+# what do we do with TUPIEXPOSURE_HEADERS ?
