--- a/src/components/scenes/CMakeLists.txt
+++ b/src/components/scenes/CMakeLists.txt
@@ -1,31 +1,7 @@
-#INCLUDEPATH += $$SCENES_DIR
-#
-#unix {
-#    LIBS += -L$$SCENES_DIR -ltupiscenes
-#}
-#
-#win32 {
-#    LIBS += -L$$SCENES_DIR/release/ -ltupiscenes
-#}
-#
-#linux-g++ {
-#    PRE_TARGETDEPS += $$SCENES_DIR/libtupiscenes.so
-#}
-
-
-#QT += opengl core gui svg xml network
-#TEMPLATE = lib
-#TARGET = tupiscenes
-#
-#INSTALLS += target
-#target.path = /lib/
-#
-#CONFIG += dll warn_on
-#
-#HEADERS += tupsceneslist.h \
-#           tupscenesdelegate.h \
-#           tupsceneswidget.h 
-#
+set(TUPISCENES_HEADERS
+    tupsceneslist.h
+    tupscenesdelegate.h
+    tupsceneswidget.h)
 
 set(TUPISCENES_SOURCES
     tupsceneslist.cpp
@@ -38,40 +14,6 @@ set_target_properties(tupiscenes PROPERTIES VERSION ${LIB_VERSION_STRING}
                       INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(tupiscenes tupifwcore tupifwgui tupibase)
 
+install(TARGETS tupiscenes LIBRARY DESTINATION ${TUPITUBE_TUPILIB})
 
-#FRAMEWORK_DIR = "../../framework"
-#include($$FRAMEWORK_DIR/framework.pri)
-#
-#unix {
-#    STORE_DIR = ../../store/
-#    INCLUDEPATH += $$STORE_DIR
-#    LIBS += -L$$STORE_DIR/ -ltupistore
-#
-#    LIBBASE_DIR = ../../libbase/
-#    INCLUDEPATH += $$LIBBASE_DIR
-#    LIBS += -L$$LIBBASE_DIR/ -ltupibase
-#
-#    LIBTUPI_DIR = ../../libtupi/
-#    INCLUDEPATH += $$LIBTUPI_DIR
-#    LIBS += -L$$LIBTUPI_DIR/ -ltupi
-#
-#    !include(../../../tupiglobal.pri) {
-#             error("Run ./configure first!")
-#    }
-#}
-#
-#win32 {
-#    include(../../../win.pri)
-#
-#    STORE_DIR = ../../store/
-#    INCLUDEPATH += $$STORE_DIR
-#    LIBS += -L$$STORE_DIR/release/ -ltupistore
-#
-#    LIBBASE_DIR = ../../libbase/
-#    INCLUDEPATH += $$LIBBASE_DIR
-#    LIBS += -L$$LIBBASE_DIR/release/ -ltupibase
-#
-#    LIBTUPI_DIR = ../../libtupi/
-#    INCLUDEPATH += $$LIBTUPI_DIR
-#    LIBS += -L$$LIBTUPI_DIR/release/ -ltupi 
-#}
+# what do we do with TUPISCENES_HEADERS?
