--- a/src/plugins/tools/ink/CMakeLists.txt
+++ b/src/plugins/tools/ink/CMakeLists.txt
@@ -1,24 +1,6 @@
-#QT += opengl core gui svg xml network
-#CONFIG += plugin warn_on
-#TEMPLATE = lib
-#TARGET = tupiinktool
-#
-#unix {
-#    !include(../../../../tupiglobal.pri){
-#        error("Please run configure first")
-#    }
-#}
-#
-#win32 {
-#    include(../../../../win.pri)
-#}
-#
-#INSTALLS += target 
-#target.path = /plugins/
-#
-#HEADERS += inktool.h \
-#           inksettings.h
-#
+set(TUPIINKTOOL_HEADERS
+    inktool.h
+    inksettings.h)
 
 set(TUPIINKTOOL_SOURCES
     inktool.cpp
@@ -27,16 +9,6 @@ set(TUPIINKTOOL_SOURCES
 add_library(tupiinktool MODULE ${TUPIINKTOOL_SOURCES})
 target_link_libraries(tupiinktool tupifwcore tupibase)
 
+install(TARGETS tupiinktool DESTINATION ${TUPITUBE_PLUGIN})
 
-#FRAMEWORK_DIR = "../../../framework"
-#include($$FRAMEWORK_DIR/framework.pri)
-#
-#LIBBASE_DIR = ../../../libbase
-#STORE_DIR = ../../../store
-#LIBTUPI_DIR = ../../../libtupi
-#COMMON_DIR = ../common
-#
-#include($$LIBBASE_DIR/libbase.pri)	
-#include($$STORE_DIR/store.pri)
-#include($$LIBTUPI_DIR/libtupi.pri)
-#include($$COMMON_DIR/common.pri)
+# what do we do with TUPIINKTOOL_HEADERS ?
