--- a/src/plugins/tools/pencil/CMakeLists.txt
+++ b/src/plugins/tools/pencil/CMakeLists.txt
@@ -1,24 +1,6 @@
-#QT += opengl core gui svg xml network
-#CONFIG += plugin warn_on
-#TEMPLATE = lib
-#TARGET = tupipenciltool
-#
-#unix {
-#    !include(../../../../tupiglobal.pri){
-#        error("Please run configure first")
-#    }
-#}
-#
-#win32 {
-#    include(../../../../win.pri)
-#}
-#
-#INSTALLS += target 
-#target.path = /plugins/
-#
-#HEADERS += penciltool.h \
-#           pensettings.h
-#
+set(TUPIPENCILTOOL_HEADERS
+    penciltool.h
+    pensettings.h)
 
 set(TUPIPENCILTOOL_SOURCES
     penciltool.cpp
@@ -27,16 +9,6 @@ set(TUPIPENCILTOOL_SOURCES
 add_library(tupipenciltool MODULE ${TUPIPENCILTOOL_SOURCES})
 target_link_libraries(tupipenciltool tupifwcore tupibase)
 
-#FRAMEWORK_DIR = "../../../framework"
-#include($$FRAMEWORK_DIR/framework.pri)
-#
-#LIBBASE_DIR = ../../../libbase
-#STORE_DIR = ../../../store
-#LIBTUPI_DIR = ../../../libtupi
-#COMMON_DIR = ../common
-#
-#include($$LIBBASE_DIR/libbase.pri)	
-#include($$STORE_DIR/store.pri)
-#include($$LIBTUPI_DIR/libtupi.pri)
-#include($$COMMON_DIR/common.pri)
-#~
+install(TARGETS tupipenciltool DESTINATION ${TUPITUBE_PLUGIN})
+
+# what do we do with TUPIPENCILTOOL_HEADERS ?
