--- a/src/plugins/tools/rotation/CMakeLists.txt
+++ b/src/plugins/tools/rotation/CMakeLists.txt
@@ -1,25 +1,7 @@
-#QT += opengl core gui svg xml network
-#CONFIG += plugin warn_on
-#TEMPLATE = lib
-#TARGET = tupirotationtool
-#
-#unix {
-#    !include(../../../../tupiglobal.pri){
-#        error("Please run configure first")
-#    }
-#}
-#
-#win32 {
-#    include(../../../../win.pri)
-#}
-#
-#INSTALLS += target 
-#target.path = /plugins/
-#
-#HEADERS += tweener.h \
-#           configurator.h \
-#           rotationsettings.h
-#
+set(TUPIROTATIONTOOL_HEADERS
+    tweener.h
+    configurator.h
+    rotationsettings.h)
 
 set(TUPIROTATIONTOOL_SOURCES
     tweener.cpp
@@ -29,15 +11,6 @@ set(TUPIROTATIONTOOL_SOURCES
 add_library(tupirotationtool MODULE ${TUPIROTATIONTOOL_SOURCES})
 target_link_libraries(tupirotationtool tupifwcore tupibase tupiplugincommon)
 
-#FRAMEWORK_DIR = "../../../framework"
-#include($$FRAMEWORK_DIR/framework.pri)
-#
-#LIBBASE_DIR = ../../../libbase
-#STORE_DIR = ../../../store
-#LIBTUPI_DIR = ../../../libtupi
-#COMMON_DIR = ../common
-#
-#include($$LIBBASE_DIR/libbase.pri)	
-#include($$STORE_DIR/store.pri)
-#include($$LIBTUPI_DIR/libtupi.pri)
-#include($$COMMON_DIR/common.pri)
+install(TARGETS tupirotationtool DESTINATION ${TUPITUBE_PLUGIN})
+
+# what do we do with TUPIROTATIONTOOL_HEADERS ?
