--- a/src/plugins/tools/shear/CMakeLists.txt
+++ b/src/plugins/tools/shear/CMakeLists.txt
@@ -1,29 +1,7 @@
-#QT += opengl core gui svg xml network
-#CONFIG += plugin warn_on
-#TEMPLATE = lib
-#TARGET = tupisheartool
-#
-#unix {
-#    !include(../../../../tupiglobal.pri){
-#        error("Please run configure first")
-#    }
-#}
-#
-#win32 {
-#    include(../../../../win.pri)
-#}
-#
-#INSTALLS += target 
-#target.path = /plugins/
-#
-#HEADERS += tweener.h \
-#           configurator.h \
-#           shearsettings.h
-#
-#SOURCES += tweener.cpp \
-#           configurator.cpp \
-#           shearsettings.cpp
-#
+set(TUPISHEARTOOL_HEADERS
+    tweener.h
+    configurator.h
+    shearsettings.h)
 
 set(TUPISHEARTOOL_SOURCES
     tweener.cpp
@@ -33,15 +11,6 @@ set(TUPISHEARTOOL_SOURCES
 add_library(tupisheartool MODULE ${TUPISHEARTOOL_SOURCES})
 target_link_libraries(tupisheartool tupifwcore tupibase tupiplugincommon)
 
-#FRAMEWORK_DIR = "../../../framework"
-#include($$FRAMEWORK_DIR/framework.pri)
-#
-#LIBBASE_DIR = ../../../libbase
-#STORE_DIR = ../../../store
-#LIBTUPI_DIR = ../../../libtupi
-#COMMON_DIR = ../common
-#
-#include($$LIBBASE_DIR/libbase.pri)	
-#include($$STORE_DIR/store.pri)
-#include($$LIBTUPI_DIR/libtupi.pri)
-#include($$COMMON_DIR/common.pri)
+install(TARGETS tupisheartool DESTINATION ${TUPITUBE_PLUGIN})
+
+# what do we do with TUPISHEARTOOL_HEADERS ?
