--- a/src/shell/CMakeLists.txt
+++ b/src/shell/CMakeLists.txt
@@ -1,55 +1,3 @@
-#QT += xml opengl svg
-#
-#INCLUDEPATH += ../plugins/tools/selection
-#
-#MYPAINT_DIR = ../mypaint
-#LIBCOLOR_DIR = ../libcolor
-#COLORPALETTE_DIR = ../components/colorpalette
-#PLAYER_DIR = ../components/player
-#WORKSPACE_DIR = ../components/workspace
-#BRUSH_DIR = ../components/brush
-## KINAS_DIR = ../components/kinas 
-#IMPORT_DIR = ../components/import 
-#EXPORT_DIR = ../components/export 
-#EXPOSURE_DIR = ../components/exposure 
-#TIMELINE_DIR = ../components/timeline 
-#LIBRARY_DIR = ../components/library
-#SCENES_DIR = ../components/scenes 
-#TWITTER_DIR = ../components/twitter
-#LIBUI_DIR = ../libui
-#STORE_DIR = ../store 
-#LIBTUPI_DIR = ../libtupi
-#LIBBASE_DIR = ../libbase
-#NET_DIR = ../net
-#
-#include($$MYPAINT_DIR/mypaint.pri)
-#include($$LIBCOLOR_DIR/libcolor.pri)
-#include($$COLORPALETTE_DIR/colorpalette.pri)
-#include($$WORKSPACE_DIR/workspace.pri)
-#include($$PLAYER_DIR/player.pri)
-#include($$BRUSH_DIR/brush.pri)
-## include($$KINAS_DIR/kinas.pri)
-#include($$IMPORT_DIR/import.pri)
-#include($$EXPORT_DIR/export.pri)
-#include($$EXPOSURE_DIR/exposure.pri)
-#include($$TIMELINE_DIR/timeline.pri)
-#include($$LIBRARY_DIR/library.pri)
-#include($$SCENES_DIR/scenes.pri)
-#include($$TWITTER_DIR/twitter.pri)
-#include($$LIBUI_DIR/libui.pri)
-#include($$STORE_DIR/store.pri)
-#include($$LIBTUPI_DIR/libtupi.pri)
-#include($$LIBBASE_DIR/libbase.pri)
-#include($$NET_DIR/net.pri)
-
-
-
-#QT += opengl core gui svg xml network
-#QT += multimedia multimediawidgets printsupport
-#QT += widgets
-#CONFIG += warn_on
-#TEMPLATE = app
-#
 #macx {
 #    CONFIG += console static
 #    ICON = ../../launcher/icons/tupitube.desk.icns
@@ -121,26 +69,16 @@
 #    TARGET = ../../bin/tupitube.bin
 #}
 #
-#HEADERS += tupsigndialog.h \
-#           tupstatusbar.h \
-#           tupnewproject.h \
-#           tupapplication.h \
-#           tuplocalprojectmanagerhandler.h \
-#           tupmainwindow.h
-#
+set(SHELL_HEADERS
+    tupsigndialog.h
+    tupstatusbar.h
+    tupnewproject.h
+    tupapplication.h
+    tuplocalprojectmanagerhandler.h
+    tupmainwindow.h)
 
 ### check again if things can be done this way
 ###set(SHELL_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
-
-#SOURCES += tupsigndialog.cpp \
-#           tupstatusbar.cpp \
-#           tupnewproject.cpp \
-#           tupapplication.cpp \
-#           tuplocalprojectmanagerhandler.cpp \
-#           tupmainwindow.cpp \
-#           tupmainwindow_gui.cpp \
-#           main.cpp
-#
 
 set(SHELL_SOURCES
     tupsigndialog.cpp
@@ -153,6 +91,9 @@ set(SHELL_SOURCES
     main.cpp)
 
 if(UNIX)
+list(APPEND SHELL_HEAERS
+     tupcrashhandler.h
+     tupcrashwidget.h)
 list(APPEND SHELL_SOURCES
      tupcrashhandler.cpp
      tupcrashwidget.cpp)
@@ -163,25 +104,3 @@ target_link_libraries(tupitube.desk tupifwgui tupistore tupiworkspace tupiplayer
    tupigui tupiexposure tupibrush tupicolorpalette tupiscenes tupilibrary
    tupitimeline tupitwitter tupinet tupimport)
 
-#unix {
-#    HEADERS += tupcrashhandler.h \
-#               tupcrashwidget.h
-#}
-#		   		   
-#FRAMEWORK_DIR = ../framework
-#include($$FRAMEWORK_DIR/framework.pri)
-#
-#unix {
-#    !include(../../tupiglobal.pri) {
-#        error("Please run configure first")
-#    }
-#}
-#
-#win32 {
-#    TARGET = tupitube.desk
-#	RC_ICONS = ../../tools/windows/tupitube.ico
-#    include(../../win.pri)
-#    include(../../quazip.win.pri)
-#}
-#
-#include(shell_config.pri)
